# tcrts

./: Cargo.toml  README.md  bf.py  expanded.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: arithmetic.rs  bf.rs  binaryop.rs  boolean.rs  brainfuck.rs  bubblesort.rs  cmp.rs  conditional.rs  function.rs  lib.rs  list.rs  macros.rs  main.rs  number.rs  pair.rs  value.rs
src/list/: append.rs  array.rs  enumerate.rs  filter.rs  index.rs  length.rs  map.rs  mod.rs  pop.rs  remove.rs  replace.rs  reverse.rs
tests/: cmp.rs  list.rs
