[package]
name = "tcrts"
version = "0.1.0"
edition = "2024"
authors = ["thatmagicalcat <thatmagicalcat@hotmail.com>"]
description = "Turing complete rust type system"
repository = "https://github.com/thatmagicalcat/tcrts"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
tcrts-macros = { version = "0.1.0", path = "macros" }
