[package]
name = "tcrts-macros"
version = "0.1.0"
edition = "2024"
description = "Helper macros for tcrts project"
authors = ["thatmagicalcat <thatmagicalcat@hotmail.com>"]
repository = "https://github.com/thatmagicalcat/tcrts"
license = "GPL-3.0-only"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"
